option('enable_fast_math',          type : 'boolean', value : true,  description : 'Use relaxed-precision floating point' )
option('enable_sse2',               type : 'boolean', value : false, description : 'Enable SSE2 instructions'             )
option('enable_sse4',               type : 'boolean', value : true,  description : 'Enable SSE4.1 and SSE4.2 instructions')
option('enable_avx',                type : 'boolean', value : false, description : 'Enable AVX instructions'              )
option('enable_avx2',               type : 'boolean', value : false, description : 'Enable AVX2 instructions'             )
option('enable_avx512',             type : 'boolean', value : false, description : 'Enable AVX-512 instructions'          )
option('enable_neon',               type : 'boolean', value : true,  description : 'Enable ARM NEON instructions'         )
option('enable_f16c',               type : 'boolean', value : false, description : 'Enable F16C conversion instructions'  )
option('enable_bmi',                type : 'boolean', value : false, description : 'Enable BMI'                           )
option('enable_bmi2',               type : 'boolean', value : false, description : 'Enable BMI2'                          )
option('enable_fma',                type : 'boolean', value : false, description : 'Enable FMA'                           )

option('mango_disable_license_gpl', type : 'boolean', value : false )

option('mango_disable_archive_ZIP', type : 'boolean', value : false )
option('mango_disable_archive_RAR', type : 'boolean', value : false )
option('mango_disable_archive_MGX', type : 'boolean', value : false )

option('mango_disable_image_ASTC',  type : 'boolean', value : false )
option('mango_disable_image_ATARI', type : 'boolean', value : false )
option('mango_disable_image_BMP',   type : 'boolean', value : false )
option('mango_disable_image_C64',   type : 'boolean', value : false )
option('mango_disable_image_DDS',   type : 'boolean', value : false )
option('mango_disable_image_GIF',   type : 'boolean', value : false )
option('mango_disable_image_HDR',   type : 'boolean', value : false )
option('mango_disable_image_IFF',   type : 'boolean', value : false )
option('mango_disable_image_JPG',   type : 'boolean', value : false )
option('mango_disable_image_KTX',   type : 'boolean', value : false )
option('mango_disable_image_PCX',   type : 'boolean', value : false )
option('mango_disable_image_PKM',   type : 'boolean', value : false )
option('mango_disable_image_PNG',   type : 'boolean', value : false )
option('mango_disable_image_PNM',   type : 'boolean', value : false )
option('mango_disable_image_PVR',   type : 'boolean', value : false )
option('mango_disable_image_SGI',   type : 'boolean', value : false )
option('mango_disable_image_TGA',   type : 'boolean', value : false )
option('mango_disable_image_WEBP',  type : 'boolean', value : false )
option('mango_disable_image_ZPNG',  type : 'boolean', value : false )
