
# ARM SIMD
option('enable_neon',         type : 'boolean', value : true,  description : 'Enable ARM NEON instructions' )

# Intel SIMD
option('enable_sse2',         type : 'boolean', value : false, description : 'Enable SSE2 instructions'     )
option('enable_sse4',         type : 'boolean', value : false, description : 'Enable SSE4 instructions'     )
option('enable_avx',          type : 'boolean', value : true,  description : 'Enable AVX instructions'      )
option('enable_avx2',         type : 'boolean', value : false, description : 'Enable AVX2 instructions'     )
option('enable_avx512',       type : 'boolean', value : false, description : 'Enable AVX-512 instructions'  )

# Intel ISA Extensions
option('enable_aes',          type : 'boolean', value : true,  description : 'Enable AES'    )
option('enable_pclmul',       type : 'boolean', value : true,  description : 'Enable PCLMUL' )
option('enable_popcnt',       type : 'boolean', value : true,  description : 'Enable POPCNT' )
option('enable_f16c',         type : 'boolean', value : true,  description : 'Enable F16C'   )
option('enable_bmi',          type : 'boolean', value : false, description : 'Enable BMI'    )
option('enable_bmi2',         type : 'boolean', value : false, description : 'Enable BMI2 '  )
option('enable_fma',          type : 'boolean', value : false, description : 'Enable FMA'    )
option('enable_sha',          type : 'boolean', value : true,  description : 'Enable SHA'    )

# Miscallaneous Options
option('disable_simd',        type : 'boolean', value : false, description : 'Disable SIMD' )
option('display_library',     type : 'combo', choices: ['xlib', 'xcb', 'wayland'], value : 'xlib', description: 'Library for communicating with the display system')
option('intel_deluxe',        type: 'boolean', value : false, description : 'Enable ALL Intel ISA extensions' )
